--- a/KPartitionLines/CMakeLists.txt
+++ b/KPartitionLines/CMakeLists.txt
@@ -2,4 +2,6 @@ cmake_minimum_required(VERSION 2.8)
 
 project(KPartitionLines)
 
-add_executable(KPartitionLines main.cpp)
+add_library(KPartitionLines KPartitionLines.cpp)
+add_executable(main main.cpp)
+target_link_libraries(main KPartitionLines)
